2010-04-07  Alan McGovern  <amcgovern@novell.com>

	* IndexedPropertyPathNode.cs: If the getter for an Indexed
	  node throws an exception, we treat the node as being broken.
	  Fixes more of DRT 232.

2010-04-07  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Attach the event handler even if
	  it's a one-time binding otherwise we'll never read the value
	  from the PropertyPathWalker.

	* PropertyPathNode.cs:
	* StandardPropertyPathNode.cs: Add an 'UpdateValue' method so
	  that there's one clear concise way of updating the value for
	  PropertyPathNodes.

	* IndexedPropertyPathNode.cs: If the index in a PropertyPath
	  can be converted to an int and there's an indexer property
	  which takes an int, we use that indexer. Otherwise we look
	  for an indexer which accepts a string and use that.

2010-04-07  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathParser.cs: Fix a bug parsing property paths like
	  [index].Property

2010-04-07  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: I tell a lie, we need to use the
	  TryParse method after the call to Binding.Converter. Fixes a
	  regression in moon-unit.

2010-04-07  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: When bindings are updating we need
	  to check if the destination type has any static Parse ()
	  methods. If so, we need to invoke them before invoking the
	  Converter supplied by the binding.

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* BindingExpressionBase.cs: Use the Binding.ConverterCulture
	  if it's supplied, otherwise use the one in
	  FrameworkElement.Language, finally fall back to the default.

2010-04-06  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathWalker.cs:
	* IndexedPropertyPathNode.cs: Update the handling of indexed
	  binding expressions to SL4 compatibility. It no longer
	  throws exceptions on negative indices or indices which
	  cannot be converted to an integer.
